src/test/ui/error-codes/ex-E0611.stderr
error[E0616]: field `0` of struct `a::Foo` is private
  --> $DIR/ex-E0611.rs:21:4
   |
LL |    y.0; //~ ERROR field `0` of struct `a::Foo` is private
   |    ^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0616`.
